--- a/style.css
+++ b/style.css
@@ -1,380 +1,271 @@
 html{
-	width:100%;
+	width:375px;
+	margin:0 auto;
+	background-color: #DCDCDC;
 }
 
-body>div:not(.long){
-	width:1010px;
-	margin:0 auto;
-}
+	
 header{
-	width:1010px;
-	margin:0 auto;
-	height:50px;
+	width:100%;
+
+}
+.header-logo{
+	padding:5px 0;
+	width:100%;
+	height:40px;
+	background-color:white;
+	line-height:40px;
+}
+.header-logo a{
+line-height:40px;
+}
+
+.title{
 	text-align:center;
+	font-size:24px;
+	letter-spacing:5px;
 }
-.header-left{
-	padding-top:15px;
-	display:table;
+
+.fa-bars{
 	float:left;
-}
-.header-right{
-	margin-right:30px;
-	float:right;
-	line-height:50px;
-}	
-.header-right a{
-	padding-left:15px;
-	font-size:12px;
-}
-header input{
-	line-height:5px;
-	line-height:50px;
-	display:table-cell;
-	margin-left:20px;
-	height:40%;
+	width:100px;
 }
 .fa-search{
-	height:10px;
-	display:table-cell;
-    font-size:10px;
-	border:1px solid black;
-}
-.title{
-	letter-spacing:5px;
-	line-height: 50px;
+	float:right;
+	width:100px;
 }
 .top-container{
-	background-color:rgba(172,172,172,0.2);
-	width:100%;
+	color:white;
+	font-weight:900;
+	height:200px;
+	background-image:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXDksKpCAfUIOAHMzeAwK0D1fVMtaZ75xe8K2GADYky11BY_FFuA);
+	background-size:cover;
 }
-.top-wrapper{
-	width:1010px;
-	margin:0 auto;
-	padding-top:20px;
-	height:290px;
-	margin-bottom:20px;
+.top-text{
+	font-size:20px;
+	padding-top:120px;
+	padding-right:60px;
+	padding-left:20px;
 }
-.top-contents{
-	width:35%;
-	float:left;
-}
-.top-contents h2{
-	margin:0 5%;
-	font-size:12px;
-}
-.top-contents h3{
-	margin:0 5%;
-	font-size:8px;
-}
-.top-contents img{
-	width:90%;
-	margin:0 5%;
-}
-.top-name{
-	float:left;
-	margin-left:5%;
-	font-size:10px;
-}
-.top-viewer{
-	float:right;
-	margin-right:5%;
-	font-size:10px;
-}
-.top-movie{
-	float:left;
-	width:30%;
-}
-.top-movie img{
-	width:90%;
-	margin:0 5%;
-}	
-.top-movie h2{
-	margin:0 5%;
-	font-size:12px;
-}
-.top-movie h3{
-	margin:0 5%;
-	font-size:8px;
+.text{
+	font-weight:bold;
 }
 .main{
-	height:1100px;
+	background-color: white;
+	height:600px;
 }
-.main-left{
-	width:15%;
+.index:hover{
+	background-color:white;
 	float:left;
+	width:50%;
+	text-align:center;
+	border-bottom:solid 2px red;
+	font-size:15px;
+	padding:15px 0;
+	color:red;
+	font-weight:bold;
 }
-.main-left h2{
-	font-size:12px;
-	margin-left:25px;
-}
-.main-right{
-	width:25%;
+.index{
+	background-color:white;
 	float:left;
+	width:50%;
+	text-align:center;
+	border-bottom:solid 1px black;
+	font-size:15px;
+	padding:15px 0;
 }
-.contents{
-	padding-right:1.5%;
-	padding-left:1.5%;
-	border-left:1px solid rgba(172,172,172,0.2);
-	border-right:1px solid rgba(172,172,172,0.2);
-	width:52.5%;
-	float:left;
-	height:100%;
-}
-.date{
-	width:100%;
-	height:20px;
-	padding-bottom:5px;
-	margin-bottom:10px;
-	border-bottom:1px solid rgba(172,172,172,0.2);
-}
-.date a{
-	float:right;
-	font-size:8px;
-	line-height:20px;
+.contents-wrapper{
+	background-color:white;
+	height:600px;
 }
 .content{
-	padding-bottom:5px;
-	border-bottom:1px dotted rgba(172,172,172,0.5);
-	margin-bottom:15px;
-	height:90px;
-}
-.index ul{
-	text-align:center;
-	margin:0 10px;
-}
-.index li{
-	border:1px solid black;
-	margin: 0 3px;
-	padding: 6px 10px 6px;
+	border-bottom:solid 1px rgba(0,0,0,0.4);
+	float:right;
 	font-size:15px;
-	display:inline-block;
-}
-.top,.explain{
-	float:left;
-	width:80%;
-}
-.content img{
-	height:90%;
-	float:left;
-}
-.top{
-	font-size:15px;
-	margin-bottom:3px;
+	padding-top:10px;
+	background-color:white;
 }
 .explain{
-	overflow:hidden;
-	height:1.5em;
-	line-height:1.5;
-	font-size:12px;
-	margin:5px 0;
-}
-.name{
-	display:inline-block;
-	width:20%;
-	float:left;
-}
-.fa-star{
-	margin-left:3px;
-}
-
-.viewer{
-	display:inline-block;
-	width:15%;
-	float:left;
-}
-
-.side{
-	margin:10px 0 10px 20px;
-	font-size: 12px;
-}
-.side-img{
-	width:15px; 
-}
-.more-ranking,.more-arrival{
-	width:100%;
-	font-size:8px;
-	margin:5px 0;
-	text-align:right;
-}
-.more-ranking a,.more-arrival a{
-	border-bottom:1px solid black;
-}
-.ranking-head,.arrival-head,.attention-head{
-	margin-top:10px;
-	border-bottom:solid 1px rgba(172,172,172,0.2);
-	padding-left:5px;
-	padding-bottom:5px;
-	border-left:solid 5px pink;
-}
-.arrival-head{
-	margin-top:10px;
-}
-.ranking-wrapper h2,.arrival-wrapper h2,.attention-wrapper h2{
-	font-size:12px;
-}
-.ranking-wrapper p,.arrival-wrapper p,.attention-wrapper p{
 	margin-top:5px;
-	font-size:8px;
+		width:100%;
 }
-.ranking,.attention,.arrival{
-	margin-left:5px;
-	height:60px;
-	font-size:10px;
-	margin-top:2px;
+.image{
+	width:18%;
+	float:left;
+}
+.space{
+	height:200px;
+}
+.detail{
+	height:30px;
+	width:80%;
+	float:right;
 	padding-top:5px;
-	margin-top:5px;
-	border-bottom:1px dotted rgba(172,172,172,0.5);
+	margin:0;
+	color:rgba(0,0,0,0.3);
 }
-.ranking:last-child,.attention:last-child,.arrival:last-child{
-	border-bottom:none;
-}
-.ranking-top,.arrival-top,.attention-top{
-	height:3em;
-	overflow:hidden;
-	line-height:1.5;
-	padding-top:2px;
-	padding-left:1px;
-	font-size:10px;
-	width:70%;
+.viewer{
 	float:left;
-	margin-left:10px;
-	margin-bottom:10px;
+	font-size:15px;
+	padding-bottom:0;
+	margin-top:10px;
 }
-.ranking-name,.arrival-name,.attention-name{
-	margin-left:10px;
-	font-size:10px;
+.editer{
+	float:right;
+	margin-right:10px;
+	margin-top:10px;
 }
-.ranking-img,.arrival img,.attention img{
-	height:85%;
-	float:left;
+.pages{
+	height:50px;
+	background-color:#EEEEEE;
+	color:rgba(0,0,0,0.4);
 }
-.advertisement-wrapper{
+.page{
+	text-align:center;
+	margin:0 auto;
+	height:100%;
+	line-height:45px;
+}
+.fa-chevron-right{
+	margin-top:15px;
+	margin-right:10px;
+	float:right;
+
+}
+.contents-logo{
 	width:100%;
-	background-color: rgba(172,172,172,0.2);
+	float:left;
+	border-bottom:solid 1px black;
+
+	font-size:15px;
+	padding:15px 0;
+}
+.contents-logo p{
+	margin:0 15px 0 ;
+}
+.space2{
+	height:50px;
 }
 .advertisement{
-	width:1010px;
-	margin:0 auto;
-	padding-top:40px;
-	height:350px;
-	padding-right:10%;
+	background-image:url(https://d1f5hsy4d47upe.cloudfront.net/12/128c8e0a211f9e5210e9bfe6d074c973_t.jpeg);
+	background-size:cover;
+	height:300px;
+
 }
 .advertisement h2{
-	width:50%;
+	padding-left:30px;
+	padding-top:30px;
+	padding-bottom:70px;
 	font-size:30px;
-	float:right;
-	margin-top:30px;
-	margin-bottom:25px;
-	color:pink;
+	margin:0;
+}
+.advertisement span::before{
+	white-space:pre;
+	content:'\A';
 }
 .advertisement h3{
-	letter-spacing:1px;
-	line-height:1.5;
-	font-size:18px;
-	float:right;
-	width:50%;
+padding-left:30px;
+font-size:15px;
 }
-.advertisement img{
-	height:300px;
-	float:left;
-	margin-left:100px;
+.advertisement h4{
+	padding:5px 30px;
+	font-size: 12px;
 }
-footer{
+.btn{
+	height:10px;
+	padding:15px 10px;
+	background-color:pink;
+	box-shadow:0 7px red;
 	margin:0 auto;
-	height:150px;
+	width:70%;
+	color:white;
+	margin:10px auto;
+
 }
-.footer-logo a{
-	text-align:center;
+.btn:active{
+	box-shadow:none;
+	position:relative;
+    top:7px;
 }
-.category{
-	float:left;
-	width:33%;
-}
-.about{
-	float:right;
-	width:50%;
-}
-.category a,.about a{
+.btn a{
 	width:100%;
-	float:left;
-	font-size:12px;
-}
-.category ul{
-	float:left;
-	width:50%;
-}
-.about ul{
-	float:left;
-	width:33%;
-}
-.footer-main li{
-	margin-left:10px;
-	margin:10px 0;
-	font-size:8px;
-	width:110px;
-}
-.footer-logo{
-	width:30%;
-	height:100%;
-	float:left;
+	display:inline-block;
 	text-align:center;
-	line-height:130px;
-	font-size:30px;
-	letter-spacing:5px;
+	
+}
+.footer{
+	margin-top:30px;
+}
+.footer-wrapper{
+	background-color:white;
+	padding-top:20px;
+	padding-bottom:20px;
 }
 .footer-main{
-	padding-top:30px;
-	float:right;
-	width:50%;
-	margin-right:20%;
-	}
-.add{
-	padding-top:10px;
-	border-top:1px solid gray;
-	height:50px;
-	width:100%;
+	margin:0 auto;
+	margin-top:30px;
+	display:table;
+	width:80%;
 }
-.add-logo{
-	line-height:25px;
-	margin-left:50px;
-	font-size:5px;
-	height:100%;
+.footer-logo{
+    text-align:center;
+    font-size:30px;
+}
+.elements{
+	font-size:20px;
+	text-align:center;
 	width:20%;
-	float:left;
+	display:table-cell;
+	margin:0 5px;
 }
-.add-title{
-	padding-right:5px;
-	border-right:1px solid black;
-}
-.add-sub{
-	padding-left:5px;
-}
-.tw-button{
-	margin-top:5px;
-	font-size:5px;
-	line-height:15px;
-	height:15px;
-	width:60px;
-	margin-right:5px;
-	border-radius:3px;
+.return-botton{
+	background-color:white;
 	text-align:center;
-	float:left;
-	background-color:#55acee;
-	color:white;
+	margin:20px 20px 20px 20px; 
+	font-size:15px;
+	height:50px;
+	border-radius:10px
 }
-.fb-button{
-	margin-top:5px;
-	font-size:5px;
-	line-height:15px;
-	height:15px;
-	width:90px;
-	border-radius:3px;
+.return-botton a{
+	line-height:50px;
+}
+.fa-chevron-up{
+	display:inline-block;
+	margin-right:10px;
+
+}
+.contact-wrapper{
+	width:50%;
+	display:table;
+	margin:0 auto;
+}
+.contact{
+	margin:0 auto;
+}
+.qa,.inquiry,.terms{
+	display:table;
+	width:33%;
+	float:left;
 	text-align:center;
-	background-color:#3B5998;
-	color:white;
-	float:left;
-}
-.end-logo{
-	float:right;
 	font-size:10px;
-	margin-right:10%;
+	height:15px;
+	line-height:15px;
+	color:rgba(0,0,0,0.3);
+	margin-bottom:10px;
+}
+.qa,.inquiry{
+	border-right:1px solid rgba(0,0,0,0.2);
+}
+.privacy,.owner{
+	font-size:10px;
+	text-align:center;
+	color:rgba(0,0,0,0.3);
+	margin:10px 0;
+}
+.icon{
+	display:block;
+	font-size:70px;
+	width:100%;
+	text-align:center;
+	color:rgba(0,0,0,0.3);
+}
